--- a/ca_defined.yml
+++ b/ca_defined.yml
@@ -12,6 +12,7 @@
     - name: curl a url
       ansible.builtin.uri:
         url: "{{ my_url }}"
+        ca_path: /etc/pki/tls/certs/ca-bundle.crt
       register: result
 
     - name: debug result
