--- a/ca_defined.yml
+++ b/ca_defined.yml
@@ -7,12 +7,13 @@
 
   vars:
     my_url: https://google.com
+    my_ca_path: /etc/pki/tls/certs/ca-bundle.crt
 
   tasks:
     - name: curl a url
       ansible.builtin.uri:
         url: "{{ my_url }}"
-        ca_path: /etc/pki/tls/certs/ca-bundle.crt
+        ca_path: "{{ my_ca_path }}"
       register: result
 
     - name: debug result
